[0.4.0-Beta] Use HyphaRepo as script provider & Move some utils to HyphaUtils library